gke-deployment/k8s-gke-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-sse-app-service
  labels:
    app: reactive-sse-app
  annotations:
    cloud.google.com/backend-config: '{"default": "reactive-sse-backendconfig"}'
    cloud.google.com/neg: '{"ingress": true}' # Added to enable container-native load balancing
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: reactive-sse-app
