gke-deployment/k8s-gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactive-sse-app-ingress
  labels:
    app: reactive-sse-app
  annotations:
    ingressClassName: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  defaultBackend:
    service:
      name: reactive-sse-app-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reactive-sse-app-service
            port:
              number: 80
